--- a/_posts/2014-07-06-shtns.md
+++ b/_posts/2014-07-06-shtns.md
@@ -14,7 +14,7 @@ tags:
   - legendre
   - openmp
 ---
-<a href="https://www.enomosphere.net/2014/07/05/clangでopenmp/">OpenMP/Clang</a>で<a href="http://users.isterre.fr/nschaeff/SHTns/">SHTns</a>をコンパイルした。
+<a href="/2014/07/05/clang-openmp/">OpenMP/Clang</a>で<a href="http://users.isterre.fr/nschaeff/SHTns/">SHTns</a>をコンパイルした。
 <!--more-->
 
 <h2>ソースの取得</h2>
