--- a/_posts/2018-01-14-nasta.md
+++ b/_posts/2018-01-14-nasta.md
@@ -21,18 +21,18 @@ tags:
 
 <a href="https://www.nasta.co.jp/">nasta</a>の<a href="https://www.nasta.co.jp/special/laundry-nasta/product/airhoop/">AirHoop</a>を取り付けました。AirHoopに物干し竿，AirHoopを掛けるAirDotの<a href="http://amzn.to/2FASYMc">セット</a>を購入。
 
-[caption id="attachment_892" align="alignnone" width="300"]<a href="https://www.enomosphere.net/wp-content/uploads/2018/01/IMG_20180114_101545870.jpg"><img class="wp-image-892 size-medium" src="https://www.enomosphere.net/wp-content/uploads/2018/01/IMG_20180114_101545870-300x225.jpg" alt="AirHoop" width="300" height="225" /></a> AirHoop[/caption]
+[caption id="attachment_892" align="alignnone" width="300"]<a href="/wp-content/uploads/2018/01/IMG_20180114_101545870.jpg"><img class="wp-image-892 size-medium" src="/wp-content/uploads/2018/01/IMG_20180114_101545870-300x225.jpg" alt="AirHoop" width="300" height="225" /></a> AirHoop[/caption]
 
 AirHoopは竿を引っ掛けるフープをポールにねじ込んで使います。ポールの長さは3種類。2本をつなぐボルトも付属しています。天井に取り付ける側にはヘッドをつけます。
 
-[caption id="attachment_894" align="alignnone" width="300"]<a href="https://www.enomosphere.net/wp-content/uploads/2018/01/IMG_20180114_110616110.jpg"><img class="wp-image-894 size-medium" src="https://www.enomosphere.net/wp-content/uploads/2018/01/IMG_20180114_110616110-300x225.jpg" alt="AirHoop Base" width="300" height="225" /></a> AirHoop Base[/caption]
+[caption id="attachment_894" align="alignnone" width="300"]<a href="/wp-content/uploads/2018/01/IMG_20180114_110616110.jpg"><img class="wp-image-894 size-medium" src="/wp-content/uploads/2018/01/IMG_20180114_110616110-300x225.jpg" alt="AirHoop Base" width="300" height="225" /></a> AirHoop Base[/caption]
 
 金属のベースを長い木ねじ2本で止めます。梁に止めました。ねじが少し傾いてしまいましたが，カバーをつければ見えません。
 
-[caption id="attachment_893" align="alignnone" width="300"]<a href="https://www.enomosphere.net/wp-content/uploads/2018/01/IMG_20180114_102743410-.jpg"><img class="wp-image-893 size-medium" src="https://www.enomosphere.net/wp-content/uploads/2018/01/IMG_20180114_102743410--300x225.jpg" alt="ランドリーポール" width="300" height="225" /></a> ランドリーポール[/caption]
+[caption id="attachment_893" align="alignnone" width="300"]<a href="/wp-content/uploads/2018/01/IMG_20180114_102743410-.jpg"><img class="wp-image-893 size-medium" src="/wp-content/uploads/2018/01/IMG_20180114_102743410--300x225.jpg" alt="ランドリーポール" width="300" height="225" /></a> ランドリーポール[/caption]
 
 ベースランドリーポールは両側に35 cmずつ伸びます。縮めた状態が100 cm，伸ばした状態で170 cm。竿は太さが合えば手持ちのものでも可。
 
-[caption id="attachment_891" align="alignnone" width="300"]<a href="https://www.enomosphere.net/wp-content/uploads/2018/01/IMG_20180114_101122369.jpg"><img class="wp-image-891 size-medium" src="https://www.enomosphere.net/wp-content/uploads/2018/01/IMG_20180114_101122369-300x225.jpg" alt="AirDot" width="300" height="225" /></a> AirDot[/caption]
+[caption id="attachment_891" align="alignnone" width="300"]<a href="/wp-content/uploads/2018/01/IMG_20180114_101122369.jpg"><img class="wp-image-891 size-medium" src="/wp-content/uploads/2018/01/IMG_20180114_101122369-300x225.jpg" alt="AirDot" width="300" height="225" /></a> AirDot[/caption]
 
 AirHoopを掛けるAirDotも同梱されています。こちらは木ねじ1本に引っ掛けて設置します。
